--- a/story-classification/Makefile
+++ b/story-classification/Makefile
@@ -1,2 +1,4 @@
 all:
 	g++ -std=c++0x main.cpp TextAnalysis.cpp classifier.cpp -o TextAnalysis
+	rsync *.cpp csa@ca:/home/csa/CAS2/hangqi/StoryTextInfo/
+	rsync *.h csa@ca:/home/csa/CAS2/hangqi/StoryTextInfo/
