--- a/story-classification/Makefile
+++ b/story-classification/Makefile
@@ -1,4 +1,7 @@
 all:
-	g++ -std=c++0x main.cpp TextAnalysis.cpp classifier.cpp -o TextAnalysis
+	g++ -std=c++0x main.cpp TextAnalysis.cpp classifier.cpp utility.cpp -o TextAnalysis
+	
+update: all
 	rsync *.cpp csa@ca:/home/csa/CAS2/hangqi/StoryTextInfo/
 	rsync *.h csa@ca:/home/csa/CAS2/hangqi/StoryTextInfo/
+	rsync Makefile csa@ca:/home/csa/CAS2/hangqi/StoryTextInfo/
