--- a/story-classification/Makefile
+++ b/story-classification/Makefile
@@ -1,6 +1,9 @@
 all:
 	g++ -std=c++0x main.cpp TextAnalysis.cpp classifier.cpp utility.cpp -o TextAnalysis
 	
+debug:
+	g++ -g -std=c++0x main.cpp TextAnalysis.cpp classifier.cpp utility.cpp -o TextAnalysis
+
 update: all
 	rsync *.cpp csa@ca:/home/csa/CAS2/hangqi/StoryTextInfo/
 	rsync *.h csa@ca:/home/csa/CAS2/hangqi/StoryTextInfo/
