Add structure for story segmentation.

--- a/story-classification/Makefile
+++ b/story-classification/Makefile
@@ -1,8 +1,8 @@
 all:
-	g++ -std=c++0x main.cpp TextAnalysis.cpp classifier.cpp utility.cpp -o TextAnalysis
+	g++ -std=c++0x main.cpp TextAnalysis.cpp classifier.cpp utility.cpp segmenter.cpp -o TextAnalysis
 	
 debug:
-	g++ -g -std=c++0x main.cpp TextAnalysis.cpp classifier.cpp utility.cpp -o TextAnalysis
+	g++ -g -std=c++0x main.cpp TextAnalysis.cpp classifier.cpp utility.cpp segmenter.cpp -o TextAnalysis
 
 update: all
 	rsync *.cpp csa@ca:/home/csa/CAS2/hangqi/StoryTextInfo/
