Change the prob_wordGivenCat, 0 -> 1e-100

--- a/story-classification/Makefile
+++ b/story-classification/Makefile
@@ -5,6 +5,6 @@ debug:
 	g++ -g -std=c++0x main.cpp TextAnalysis.cpp classifier.cpp utility.cpp segmenter.cpp -o TextAnalysis
 
 update: all
-	rsync *.cpp csa@ca:/home/csa/CAS2/hangqi/StoryTextInfo/
-	rsync *.h csa@ca:/home/csa/CAS2/hangqi/StoryTextInfo/
-	rsync Makefile csa@ca:/home/csa/CAS2/hangqi/StoryTextInfo/
+	rsync *.cpp csa@164.67.183.179:/home/csa/CAS2/hangqi/StoryTextInfo/
+	rsync *.h csa@164.67.183.179:/home/csa/CAS2/hangqi/StoryTextInfo/
+	rsync Makefile csa@164.67.183.179:/home/csa/CAS2/hangqi/StoryTextInfo/
